--- a/index.html
+++ b/index.html
@@ -1,208 +1,391 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR Камера — Чарівне Пригодництво!</title>
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AR-Україна: Навчайся у реальності майбутнього</title>
+  <meta name="description" content="Інтерактивне AR-навчання про Україну з вікториною" />
   <style>
-    html, body {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
+    }
+
+    body {
+      margin: 0;
       overflow: hidden;
-      touch-action: none;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      background: transparent;
-    }
-    a-scene {
-      width: 100% !important;
-      height: 100% !important;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: transparent;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #000;
     }
 
-    #scanText {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #FF69B4;
-      font-size: 2em;
-      font-weight: bold;
-      text-shadow: 2px 2px 10px yellow, 0 0 10px #ff00ff;
-      z-index: 10;
-      text-align: center;
-      width: 90%;
-      animation: pulse 1.5s infinite;
-      background: rgba(255, 255, 0, 0.9);
-      padding: 15px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 105, 180, 0.8);
-    }
-    @keyframes pulse {
-      0% { transform: translate(-50%, -50%) scale(1); }
-      50% { transform: translate(-50%, -50%) scale(1.1); }
-      100% { transform: translate(-50%, -50%) scale(1); }
-    }
-
-    #clickToStart {
-      position: fixed;
+    #overlay {
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      color: white;
+      background: rgba(0, 0, 0, 0.6);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      z-index: 100;
-      font-size: 1.8em;
+      color: white;
+      font-size: 24px;
       text-align: center;
+      z-index: 10;
+      transition: opacity 0.5s ease;
       padding: 20px;
     }
-    #clickToStart span {
-      display: inline-block;
-      animation: bounce 1s infinite;
+
+    #overlay.hidden {
+      opacity: 0;
+      pointer-events: none;
     }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    #centerYellowDot {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 12px;
-      height: 12px;
-      background: #FFD700;
-      border-radius: 50%;
-      z-index: 10;
-      display: none;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+    #overlay p {
+      margin: 10px 0 0;
+      font-size: 18px;
       opacity: 0.9;
     }
 
-    #smartLessaBtn {
-      position: fixed;
+    #video-controls {
+      position: absolute;
       bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: linear-gradient(45deg, #ff0044, #ff6600);
+      width: 100%;
+      text-align: center;
+      z-index: 20;
+      display: none;
+    }
+
+    button {
+      padding: 12px 20px;
+      margin: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #0057b7; /* Синій — колір прапора */
       color: white;
-      padding: 14px 24px;
-      border-radius: 30px;
-      font-size: 1.1em;
+      border: none;
+      border-radius: 8px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    button:hover, button:focus {
+      background-color: #ffd700; /* Жовтий — другий колір */
+      color: black;
+      outline: 2px solid white;
+    }
+
+    #quiz-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.9);
+      color: white;
+      padding: 25px;
+      border-radius: 12px;
+      max-width: 90%;
+      width: 400px;
+      text-align: center;
+      z-index: 30;
+      display: none;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    #quiz-container h2 {
+      margin: 0 0 16px;
+      font-size: 22px;
+    }
+
+    #question {
+      font-size: 18px;
+      margin-bottom: 16px;
+    }
+
+    #options {
+      margin-bottom: 20px;
+    }
+
+    .option {
+      padding: 12px;
+      margin: 8px 0;
+      background: #333;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: transform 0.1s;
+      border: 1px solid #555;
+    }
+
+    .option:hover {
+      background: #444;
+    }
+
+    .option:focus {
+      outline: 2px solid #ffd700;
+    }
+
+    .option.correct {
+      background: #28a745;
+      color: white;
+      animation: correct 0.5s;
       font-weight: bold;
-      text-decoration: none;
-      z-index: 10;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+    }
+
+    .option.incorrect {
+      background: #dc3545;
+      color: white;
+      animation: incorrect 0.5s;
+    }
+
+    @keyframes correct {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes incorrect {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-10px); }
+      50% { transform: translateX(10px); }
+      75% { transform: translateX(-10px); }
+      100% { transform: translateX(0); }
+    }
+
+    #next-question, #return-to-ar {
+      display: none;
     }
   </style>
 </head>
 <body>
 
-  <!-- Підказка: клікни, щоб увімкнути -->
-  <div id="clickToStart">
-    Клацни, щоб<br>увімкнути чари! ✨<br>
-    <span>👇</span>
+  <!-- Інструкція на початку -->
+  <div id="overlay">
+    <div>
+      <div>🔍 Наведи камеру на маркер</div>
+      <p>Роздрукуй <strong>marker.png</strong> або відкрий на іншому пристрої</p>
+    </div>
   </div>
 
-  <!-- Інструкція AR -->
-  <div id="scanText">🔍 Наведи на зображення!</div>
+  <!-- Кнопки керування відео -->
+  <div id="video-controls">
+    <button onclick="playVideo()">▶️ Запустити відео</button>
+    <button onclick="pauseVideo()">⏸ Пауза</button>
+    <button onclick="stopVideo()">⏹ Зупинити</button>
+    <button onclick="showQuiz()">👉 Вікторина</button>
+  </div>
 
-  <!-- Жовта крапка -->
-  <div id="centerYellowDot"></div>
+  <!-- Вікторина -->
+  <div id="quiz-container">
+    <h2>Вікторина про Україну</h2>
+    <div id="question"></div>
+    <div id="options"></div>
+    <button id="next-question">Наступне питання</button>
+    <button id="return-to-ar">🔄 Повернутися</button>
+  </div>
 
-  <!-- AR Сцена -->
-  <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
-    <a-marker id="marker" type="pattern" url="marker.patt">
-      <a-video 
-        id="arVideo" 
-        src="ar-video.mp4" 
-        position="0 0 0" 
-        rotation="-90 0 0" 
-        preload="none"
+  <!-- AR-сцена -->
+  <a-scene
+    embedded
+    arjs="sourceType: webcam; debugUIEnabled: false;"
+    vr-mode-ui="enabled: false"
+  >
+    <!-- Твій кастомний маркер -->
+    <a-marker type="pattern" url="./markers/marker.patt">
+      <a-video
+        id="ar-video"
+        src="./video/ar-video.mp4"
+        width="2"
+        height="1.125"
+        position="0 0 0"
+        rotation="-90 0 0"
         autoplay="false"
-        muted="true">
-      </a-video>
+        muted
+        playsinline
+      ></a-video>
     </a-marker>
+
     <a-entity camera></a-entity>
   </a-scene>
 
-  <!-- Кнопка YouTube -->
-  <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
-     id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
-
-  <!-- Звук -->
-  <audio id="successSound" src="https://cdn.pixabay.com/audio/2021/09/21/audio_2811f3692c.mp3" preload="auto"></audio>
+  <!-- Скрипти після контенту -->
+  <script src="https://cdn.jsdelivr.net/npm/aframe@1.5.0/dist/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.0/aframe/build/aframe-ar.js"></script>
 
   <script>
-    const marker = document.getElementById('marker');
-    const scanText = document.getElementById('scanText');
-    const centerYellowDot = document.getElementById('centerYellowDot');
-    const arVideo = document.getElementById('arVideo');
-    const successSound = document.getElementById('successSound');
-    const clickToStart = document.getElementById('clickToStart');
+    // Елементи
+    const overlay = document.getElementById('overlay');
+    const videoControls = document.getElementById('video-controls');
+    const videoEl = document.getElementById('ar-video');
+    const quizContainer = document.getElementById('quiz-container');
+    const questionEl = document.getElementById('question');
+    const optionsEl = document.getElementById('options');
+    const nextButton = document.getElementById('next-question');
+    const returnButton = document.getElementById('return-to-ar');
 
-    let canPlay = false; // Чи дозволив користувач грати
+    // Звуки
+    const correctSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-01a.mp3');
+    const incorrectSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-02.mp3');
 
-    // Перший клік — розблокує можливість грати
-    clickToStart.addEventListener('click', function() {
-      clickToStart.style.display = 'none'; // Приховуємо екран
-      canPlay = true;
-    });
+    // Розблокування звуку при першому кліку
+    let soundUnlocked = false;
+    document.body.addEventListener('click', unlockAudio, { once: true });
 
-    // Пропорції відео
-    arVideo.addEventListener('loadedmetadata', () => {
-      const videoWidth = arVideo.videoWidth;
-      const videoHeight = arVideo.videoHeight;
-      const scaleFactor = 2;
-      const height = (videoHeight / 100) * scaleFactor;
-      const width = (videoWidth / videoHeight) * height;
-      arVideo.setAttribute('width', width);
-      arVideo.setAttribute('height', height);
-    });
+    function unlockAudio() {
+      soundUnlocked = true;
+      // Тихе програвання для активації
+      correctSound.volume = 0;
+      incorrectSound.volume = 0;
+      correctSound.play().then(() => {
+        correctSound.volume = 1;
+        incorrectSound.volume = 1;
+      }).catch(() => {
+        console.warn("Автоматичне відтворення звуку заблоковано.");
+      });
+    }
 
-    // Маркер знайдено
+    // Питання вікторини
+    const questions = [
+      {
+        question: "Столиця України?",
+        options: ["Київ", "Львів", "Одеса", "Харків"],
+        correct: 0
+      },
+      {
+        question: "Державна мова України?",
+        options: ["Російська", "Українська", "Польська"],
+        correct: 1
+      },
+      {
+        question: "Який символ на гербі України?",
+        options: ["Зірка", "Тризуб", "Сонце"],
+        correct: 1
+      },
+      {
+        question: "Рік проголошення Незалежності України?",
+        options: ["1990", "1991", "1992"],
+        correct: 1
+      },
+      {
+        question: "Найбільша річка України?",
+        options: ["Дніпро", "Дунай", "Дністер"],
+        correct: 0
+      }
+    ];
+
+    let currentQuestion = 0;
+
+    // Обробка маркера
+    const marker = document.querySelector('a-marker');
     marker.addEventListener('markerFound', () => {
-      scanText.style.display = 'none';
-      centerYellowDot.style.display = 'block';
+      overlay.classList.add('hidden');
+      videoControls.style.display = 'block';
+    });
 
-      if (canPlay) {
-        arVideo.play().catch(() => {});
-        successSound.play().catch(() => {});
+    marker.addEventListener('markerLost', () => {
+      overlay.classList.remove('hidden');
+      videoControls.style.display = 'none';
+      if (quizContainer.style.display === 'block') {
+        if (confirm("Маркер втрачено. Повернутися до сканування?")) {
+          quizContainer.style.display = 'none';
+          stopVideo();
+        }
+      } else {
+        stopVideo();
       }
     });
 
-    // Маркер втрачено
-    marker.addEventListener('markerLost', () => {
-      scanText.style.display = 'block';
-      centerYellowDot.style.display = 'none';
-      arVideo.pause();
-    });
-
-    // Фікс висоти
-    function fixHeight() {
-      document.body.style.height = window.innerHeight + 'px';
+    // Керування відео
+    function getVideo() {
+      return videoEl.components.material.material.map.image;
     }
-    window.addEventListener('resize', fixHeight);
-    fixHeight();
 
-    // Задня камера
-    AFRAME.utils.device.getCameraPermission = function () {
-      return navigator.mediaDevices.getUserMedia({
-        video: { facingMode: 'environment' }
+    function playVideo() {
+      const video = getVideo();
+      if (video) video.play().catch(e => console.error("Помилка відтворення:", e));
+    }
+
+    function pauseVideo() {
+      const video = getVideo();
+      if (video) video.pause();
+    }
+
+    function stopVideo() {
+      const video = getVideo();
+      if (video) {
+        video.pause();
+        video.currentTime = 0;
+      }
+    }
+
+    // Вікторина
+    function showQuiz() {
+      videoControls.style.display = 'none';
+      quizContainer.style.display = 'block';
+      currentQuestion = 0;
+      displayQuestion();
+    }
+
+    function displayQuestion() {
+      const q = questions[currentQuestion];
+      questionEl.textContent = q.question;
+      optionsEl.innerHTML = '';
+
+      q.options.forEach((option, index) => {
+        const btn = document.createElement('button');
+        btn.className = 'option';
+        btn.textContent = option;
+        btn.onclick = () => checkAnswer(index);
+        btn.tabIndex = 0;
+        btn.onkeydown = (e) => {
+          if (e.key === 'Enter' || e.key === ' ') {
+            e.preventDefault();
+            checkAnswer(index);
+          }
+        };
+        optionsEl.appendChild(btn);
       });
+
+      nextButton.style.display = 'none';
+    }
+
+    function checkAnswer(index) {
+      const q = questions[currentQuestion];
+      const options = optionsEl.children;
+
+      if (index === q.correct) {
+        options[index].classList.add('correct');
+        if (soundUnlocked) correctSound.play();
+      } else {
+        options[index].classList.add('incorrect');
+        options[q.correct].classList.add('correct');
+        if (soundUnlocked) incorrectSound.play();
+      }
+
+      // Блокуємо кліки
+      for (let i = 0; i < options.length; i++) {
+        options[i].onclick = null;
+        options[i].onkeydown = null;
+      }
+
+      nextButton.style.display = 'block';
+      if (currentQuestion === questions.length - 1) {
+        nextButton.style.display = 'none';
+        returnButton.style.display = 'block';
+      }
+    }
+
+    nextButton.onclick = () => {
+      currentQuestion++;
+      if (currentQuestion < questions.length) {
+        displayQuestion();
+      }
+    };
+
+    returnButton.onclick = () => {
+      quizContainer.style.display = 'none';
+      videoControls.style.display = 'block';
+      stopVideo();
     };
   </script>
 </body>
